added phone_validation, license in profile, updated doc
